--- a/references.bib
+++ b/references.bib
@@ -160,3 +160,56 @@ url={https://media.giphy.com/media/3oxHQlREH7ufJK4yYg/giphy.gif},
 journal={GIPHY},
 year={2020}
 }
+
+
+@Manual{readr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Romain Francois},
+    year = {2018},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=readr},
+  }
+
+  @Manual{readxl,
+    title = {readxl: Read Excel Files},
+    author = {Hadley Wickham and Jennifer Bryan},
+    year = {2019},
+    note = {R package version 1.3.1},
+    url = {https://CRAN.R-project.org/package=readxl},
+  }
+
+  @Manual{naniar,
+    title = {naniar: Data Structures, Summaries, and Visualisations for Missing Data},
+    author = {Nicholas Tierney and Di Cook and Miles McBain and Colin Fay},
+    year = {2020},
+    note = {R package version 0.6.0},
+    url = {https://CRAN.R-project.org/package=naniar},
+  }
+
+  @Article{lubridate,
+    title = {Dates and Times Made Easy with {lubridate}},
+    author = {Garrett Grolemund and Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2011},
+    volume = {40},
+    number = {3},
+    pages = {1--25},
+    url = {http://www.jstatsoft.org/v40/i03/},
+  }
+
+   @Manual{forcats,
+    title = {forcats: Tools for Working with Categorical Variables (Factors)},
+    author = {Hadley Wickham},
+    year = {2020},
+    note = {R package version 0.5.0},
+    url = {https://CRAN.R-project.org/package=forcats},
+  }
+
+
+  @Manual{scales,
+    title = {scales: Scale Functions for Visualization},
+    author = {Hadley Wickham and Dana Seidel},
+    year = {2020},
+    note = {R package version 1.1.1},
+    url = {https://CRAN.R-project.org/package=scales},
+  }
